# oz_django_miniproject_team_2

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: checks.yml  ci.yml
accounts/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_account_created_at_account_updated_at.py  0003_alter_account_account_number_and_more.py
config/: base.py  local.py  prod.py  schema.py  settings.py  urls.py
core/: models.py
core/utils/: error_messages.py  exexception_handler.py
taewoo_apps/: apps.py  constants.py  managers.py  oauth_serializer.py  oauth_views.py  serializers.py  views.py
taewoo_apps/serializers/: account_serializers.py  auth_serializers.py  oauth_serializer.py  transaction_history_serializers.py  user_serializers.py
taewoo_apps/services/: email_service.py  google_social_login_service.py  kakao_social_login_service.py  naver_social_login_service.py  social_login_service.py  token_service.py  user_service.py
taewoo_apps/tests/: test_accounts_models.py  test_user_models.py
taewoo_apps/urls/: account_urls.py  auth_urls.py  oauth_urls.py  transaction_history_urls.py  urls.py
taewoo_apps/views/: account_views.py  auth_views.py  oauth_views.py  transaction_history_views.py
transaction_histiory/: models.py
transaction_historys/: admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  constants.py  managers.py  models.py  serializers.py  tests.py  urls.py
users/utils/: email_utils.py
(+31 files in other folders)
